--- a/scss/fonts.css
+++ b/scss/fonts.css
@@ -1,24 +1,20 @@
 @font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Medium.eot');
-    src: url('Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
-        url('Montserrat-Medium.woff2') format('woff2'),
-        url('Montserrat-Medium.woff') format('woff'),
-        url('Montserrat-Medium.ttf') format('truetype'),
-        url('Montserrat-Medium.svg#Montserrat-Medium') format('svg');
+    font-family: "Montserrat";
+    src: url("../fonts/");
+    src: url("../fonts/?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-Medium.woff2") format("woff2"),
+        url("../fonts/Montserrat-Medium.woff") format("woff"), url("../fonts/Montserrat-Medium.ttf") format("truetype"),
+        url("../fonts/Montserrat-Medium.svg#Montserrat-Medium") format("svg");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Black.eot');
-    src: url('Montserrat-Black.eot?#iefix') format('embedded-opentype'),
-        url('Montserrat-Black.woff2') format('woff2'),
-        url('Montserrat-Black.woff') format('woff'),
-        url('Montserrat-Black.ttf') format('truetype'),
-        url('Montserrat-Black.svg#Montserrat-Black') format('svg');
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-Black.eot");
+    src: url("../fonts/Montserrat-Black.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/Montserrat-Black.woff2") format("woff2"), url("../fonts/Montserrat-Black.woff") format("woff"),
+        url("../fonts/Montserrat-Black.ttf") format("truetype"),
+        url("../fonts/Montserrat-Black.svg#Montserrat-Black") format("svg");
     font-weight: 900;
     font-style: normal;
 }
-
