--- a/scss/internal-style_ar.scss
+++ b/scss/internal-style_ar.scss
@@ -25,7 +25,9 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.news-events-lists {
+.news-events-lists,
+.projects-lists,
+.careers-lists {
   .news-content,
   .events-content {
     .content-list {
