--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,9 +22,14 @@ html {
 .html,
 .body {
   overflow: hidden;
+  font-family: "Montserrat";
   @media (max-width: 576px) {
     overflow: auto;
   }
+}
+
+a:not([href]) {
+  cursor: pointer;
 }
 
 .bold {
@@ -283,6 +288,10 @@ section {
   .home_title {
     font-size: 2.5rem;
     width: 55%;
+    @media (max-width: 576px) {
+      font-size: 2rem;
+      width: 80%;
+    }
   }
 
   .toNews {
@@ -313,7 +322,7 @@ section {
 
   @media (max-width: 768px) {
     .logo-white img {
-      height: 70px;
+      height: 170px;
     }
     .register {
       background-color: $redColor;
@@ -332,6 +341,21 @@ section {
 
     @media (max-width: 992px) {
       background: transparent;
+    }
+    .projects_links {
+      li {
+        position: relative;
+        &:after {
+          content: "\f105";
+          position: absolute;
+          right: 0;
+          top: 50%;
+          transform: translateY(-50%);
+          font-weight: 900;
+          font-family: "Font Awesome\ 5 Free";
+          font-size: 20px;
+        }
+      }
     }
 
     .social {
@@ -371,6 +395,7 @@ section {
   }
   .social-mobile {
     bottom: 40px;
+    width: 88%;
   }
 }
 
@@ -587,6 +612,9 @@ section {
       &:hover {
         color: $blueColor;
         background-color: #fff;
+      }
+      &:focus {
+        outline: 0;
       }
       @media (max-width: 768px) {
         display: block;
