--- a/scss/style_ar.css
+++ b/scss/style_ar.css
@@ -15,6 +15,10 @@ html {
   }
 }
 
+a:not([href]) {
+  cursor: pointer;
+}
+
 .loading {
   width: 100vw;
   height: 100vh;
@@ -200,7 +204,7 @@ html {
 body {
   max-width: 100vw;
   height: auto;
-  font-family: "Almarai", sans-serif;
+  font-family: "Almarai", sans-serif !important;
   direction: rtl;
 }
 
@@ -275,7 +279,7 @@ ul {
 }
 
 .bg-blue {
-  color: #fff;
+  color: #fff !important;
   background-color: #19a2e0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -373,6 +377,13 @@ section {
   width: 55%;
 }
 
+@media (max-width: 576px) {
+  .home .home_title {
+    font-size: 2rem;
+    width: 80%;
+  }
+}
+
 .home .toNews a {
   font-size: 18px;
   -webkit-transition: all 0.3s ease-in-out;
@@ -407,7 +418,7 @@ section {
 
 @media (max-width: 768px) {
   .home .logo-white img {
-    height: 70px;
+    height: 170px;
   }
   .home .register {
     background-color: #d62b4d;
@@ -431,6 +442,23 @@ section {
   .home .side {
     background: transparent;
   }
+}
+
+.home .side .projects_links li {
+  position: relative;
+}
+
+.home .side .projects_links li:after {
+  content: "\f104";
+  position: absolute;
+  right: unset;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  font-weight: 900;
+  font-family: "Font Awesome\ 5 Free";
+  font-size: 20px;
 }
 
 .home .side .social {
@@ -491,6 +519,7 @@ section {
 
 .home .social-mobile {
   bottom: 40px;
+  width: 88%;
 }
 
 .news {
