--- a/scss/internal-style.css
+++ b/scss/internal-style.css
@@ -1328,6 +1328,12 @@ input[type="number"]::-webkit-outer-spin-button {
   position: relative;
 }
 
+@media (max-width: 768px) {
+  .side-list .list-title {
+    font-size: 2rem;
+  }
+}
+
 .side-list .list-title::before {
   content: "";
   display: block;
