--- a/scss/style.scss
+++ b/scss/style.scss
@@ -337,7 +337,8 @@ section {
     right: 0;
     height: 100vh;
     background: #f2f2f2;
-    width: 17vw;
+    width: 18vw;
+    padding: 30px;
 
     @media (max-width: 992px) {
       background: transparent;
@@ -359,7 +360,8 @@ section {
     }
 
     .social {
-      height: 25%;
+      height: 40%;
+      margin-top: auto;
       a {
         padding: 21px;
         transition: $ease-in-out;
