--- a/scss/style_ar.scss
+++ b/scss/style_ar.scss
@@ -334,7 +334,8 @@ section {
     left: 0;
     height: 100vh;
     background: #f2f2f2;
-    width: 17vw;
+    width: 18vw;
+    padding: 30px;
     right: unset;
 
     @media (max-width: 992px) {
@@ -358,7 +359,8 @@ section {
     }
 
     .social {
-      height: 25%;
+      height: 40%;
+      margin-top: auto;
       a {
         padding: 21px;
         transition: $ease-in-out;
