--- a/scss/style_ar.css
+++ b/scss/style_ar.css
@@ -434,7 +434,8 @@ section {
   left: 0;
   height: 100vh;
   background: #f2f2f2;
-  width: 17vw;
+  width: 18vw;
+  padding: 30px;
   right: unset;
 }
 
@@ -462,7 +463,8 @@ section {
 }
 
 .home .side .social {
-  height: 25%;
+  height: 40%;
+  margin-top: auto;
 }
 
 .home .side .social a {
