--- a/scss/internal-style.scss
+++ b/scss/internal-style.scss
@@ -557,6 +557,9 @@ input[type="number"]::-webkit-outer-spin-button {
     li {
       line-height: 60px;
       position: relative;
+      @media (max-width: 1440px) {
+        font-size: 16px;
+      }
       &.active {
         &::before {
           content: "";
